codigo/7-bucles/error_break.out
  File "<stdin>", line 1
    break
    ^
SyntaxError: 'break' outside loop